# interact_box_extras

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: InteractBoxExtrasConfig.cmake.in  file_to_hex.cmake
include/: interact_box_settings.hpp  malware_date_settings.hpp  message_box_process.hpp  processes.hpp  trivia_game.hpp  tts_process.hpp
include/interact_box_settings/: icon.h  resources.h  resources.h.in
include/interact_box_settings/structs/: setting.hpp
include/interact_box_settings/widgets/: array_edit_widget.hpp  autorun_toggle_widget.hpp  bool_edit_widget.hpp  directory_edit_widget.hpp  int_edit_widget.hpp  logging_edit_widget.hpp  string_edit_widget.hpp  widgets.hpp  widgets_exported.hpp
include/malware_date_settings/: icon.h  resources.h
include/malware_date_settings/widgets/: data_edit_widget.hpp
include/message_box_process/: icon.h  resources.h
include/trivia_game/: icon.h  questions_example.h  resources.h  resources.h.in
include/tts_process/: resources.h  resources.h.in
src/compat/: mingw_64_compat.cpp
src/interact_box_settings/: CMakeLists.txt  interact_box_settings.cpp  interact_box_settings.desktop  resources.rc  version.rc.in
src/interact_box_settings/widgets/: array_edit_widget.cpp  autorun_toggle_widget.cpp  bool_edit_widget.cpp  int_edit_widget.cpp  logging_edit_widget.cpp  string_edit_widget.cpp
src/malware_date_settings/: CMakeLists.txt  malware_date_settings.cpp  malware_date_settings.desktop  resources.rc  version.rc.in
src/malware_date_settings/widgets/: data_edit_widget.cpp
src/message_box_process/: CMakeLists.txt  message_box_process.cpp  resources.rc  version.rc.in
src/trivia_game/: CMakeLists.txt  app.manifest  questions.example.json  resources.rc  resources.rc.in  trivia_game.cpp  trivia_game.desktop  version.rc.in
src/tts_process/: CMakeLists.txt  resources.rc  resources.rc.in  tts_process.cpp  version.rc.in
